RAGINI RANE/src/objects/Department__c.object
<CustomObject>
    <fields>
        <fullName>DepartmentID__c</fullName>
        <description>DEP-{000000}</description>
        <label>DepartmentId</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>DepartmentName__c</fullName>
        <label>DepartmentName</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <label>Department</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>